--- a/alarm_settings.json
+++ b/alarm_settings.json
@@ -1,8 +1,9 @@
 {
-  "time": "23:15",
+  "time": "00:15",
   "days": [
-    "Monday"
+    "Monday",
+    "Friday"
   ],
   "enabled": true,
-  "last_updated": "2025-10-06T23:02:36.112897"
+  "last_updated": "2025-10-10T00:05:07.228308"
 }
